Update markdown and fix layout issues

--- a/components/Article.module.scss
+++ b/components/Article.module.scss
@@ -14,6 +14,7 @@
     font-weight: 600;
     line-height: 1em;
     text-align: left;
+    text-transform: none;
     color: #2D2929;
   }
 }
