--- a/components/Layout.module.scss
+++ b/components/Layout.module.scss
@@ -1,6 +1,6 @@
 .MountainContainer {
   min-height: 600px;
-  background-image: linear-gradient(#d3f1fc -450px, #00b3f9 500px, #88a0ab 510px);
+  background-image: linear-gradient(#d3f1fc -450px, #00b3f9 500px, #88a0ab 766px);
 }
 
 .Montain {
