--- a/pages/styles.scss
+++ b/pages/styles.scss
@@ -1,3 +1,13 @@
+html {
+	box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+	box-sizing: inherit;
+}
+
 .button {
   width: 100%;
   display: inline-block;
